# M5Bala-for-CLion

./: .clang-format  README.md  platformio.ini
Notebooks/: ImageEncode.ipynb  SoundEncode.ipynb  pyproject.toml
Notebooks/data/: bala_snd.h  img_jb.psd
src/: Bala2.ino  README.md  bala.cpp  bala_img.c  bala_img.h  bala_snd.h  calibration.cpp  imu_filter.cpp  main.cpp
