[tool.poetry]
name = "jbnotes"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
jupyterlab = "^4.2.5"
pandas = "^2.2.2"
pillow = "^10.4.0"
pydub = "^0.25.1"
soundfile = "^0.12.1"
matplotlib = "^3.9.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
